[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adam_viz"
version = "0.1.0"
description = "Advent of Code visualization library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
authors = [
    {name = "Adam Saunders", email = "adam.m.saunders@vanderbilt.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload"
]

[project.urls]
Homepage = "https://github.com/saundersresearch/adventofcode_2025"
